# AntaREST

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  ALEMBIC_README  AUTHORS.txt  AntaresWeb.spec  AntaresWebLinux.spec  AntaresWebWin.spec  AntaresWebWorker.spec  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  antareslauncher  commitlint.config.cjs  commitlint.config.js  coverage.xml  docker-compose.override.yml.example  docker-compose.yml  generate-changelog.sh  migration.sql  mkdocs.yml  nodesource_setup.sh  package-lock.json  package.json  pyproject.toml  readthedocs.yml  renovate.json  requirements-desktop.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements-windows.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  swagger.json  (+1 more)
.github/: issue-branch.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  commitlint.yml  compatibility.yml  deploy.yml  issue-branch.yml  license-header.yml  license_header.yml  main.yml  pr-management.yml  pr-title.yml  release-changelog.yml  test.yml  test_deploy_windows.yml  updatedocs.yml  windows-installer.yml  worker.yml
AntaREST/storage_api/: main.py  wsgi.py
alembic/: env.py
alembic/old_versions/: 576c82a5626e_fix_study_owner.py  5bf739353855_base.py  a12f9bf62597_update_login.py
alembic/versions/: 00a9ceb38842_add_study_version_to_commands.py  0146b79f723c_update_study.py  04a098a4a38e_add_solver_presets_table.py  0b2141573d50_merge_directory_and_solver_presets.py  0e628a645214_add_thermal_cluster_tables.py  0ed392eeb506_add_renewable_clusters_tables.py  10318e5320f6_create_link_table.py  10318e5320f6_create_link_tables.py  124274d80f2e_create_link_matrices.py  15f3bce09264_permission_fix.py  1f5db5dfad80_add_indexes_to_study_tables.py  23ff8deddb4a_add_task_type.py  251a3393d58d_add_hydro_matrix_tables.py  2572145aff71_add_storage_mode_and_area_tables.py  26c50ef2a0e1_add_job_solver_stats.py  298aecf6ea40_add_configdata.py  2a8c5e41f214_fix_permissions.py  2ed6bf9f1690_add_tasks.py  31ed7828f0de_add_xpansion_tables.py  3292cdb4557a_variantstudy.py  3a7f9c2d1e8b_add_xpansion_tables.py  3c70366b10ea_add_tag_and_study_tag_tables.py  4121d3b48393_change_reserves_format.py  415976c0a4d4_add_filetransfer_manager.py  423fe2c8ee40_add_commandblock_index.py  444b392eeaa6_add_reserves_enabled_to_compatibility_.py  47ab888dc44d_add_dataset.py  490b80a84bb5_add_cascade_delete_for_sqlite.py  4bbe4f165a05_merge_heads.py  512a751033dd_sequence_creation.py  55138d877c6a_service_refactoring.py  562d4e1bd95d_add_thematic_trimming_table.py  5723da8d4e29_add_binding_constraint_tables.py  5c734a09bbb0_add_hydro_tables.py  5cb8c14b3fcf_add_task_type.py  5f34f4afafe8_remove_study_author.py  63ed81e5ce6f_rawstudies_folder_info.py  665f7b1d7575_add_thermal_reserve_.py  6a04e38b8704_base.py  6a6634ed2c2f_add_tag_and_study_tag_tables.py  (+79 more)
antarest/: __init__.py  db.py  dbmodel.py  dependencies.py  dishka_provider.py  front.py  globals.py  gui.py  main.py  service_creator.py  singleton_services.py  utils.py  wsgi.py
antarest/blobstore/: blob_garbage_collector.py  blob_usage_provider.py  exceptions.py  in_memory.py  main.py  model.py  repository.py  service.py
antarest/celery/: __init__.py  app.py  context.py
antarest/common/: auth.py  config.py  custom_types.py  dto.py  exceptions.py  jwt.py  logger.py  persistence.py  requests.py  roles.py  swagger.py
antarest/core/: api_types.py  application.py  calendar.py  cli.py  config.py  core_blueprint.py  custom_types.py  dependencies.py  exceptions.py  filesystem_blueprint.py  jwt.py  metrics.py  model.py  permissions.py  persistence.py  requests.py  roles.py  swagger.py  tables.py  typing.py  version_info.py
antarest/desktop/: systray_app.py
antarest/eventbus/: config.py  connections.py  main.py  service.py  web.py
antarest/fastapi_jwt_auth/: LICENSE  README.md  __init__.py  auth_config.py  auth_jwt.py  config.py  exceptions.py
antarest/fastapi_sqlalchemy/: __init__.py  middleware.py
api-iso-antares/: main.py
api_iso_antares/: custom_exceptions.py  custom_types.py  jsm.py  jsonschema.json  jsonschema.py  main.py  server.py  wsgi.py
conf/: gunicorn-single.py  gunicorn.py  requirements.txt
docker/: Dockerfile
docs/: CHANGELOG.md  DEVELOPER.md  add-new-antares-version.md  architecture.md  configuration.md  contributing.md  database.md  deploy.md  index.md  installation.md  mkdocs.yml
docs/source/: conf.py  (+3 more)
electron/: index.js  package-lock.json  package.json
examples/: demo_sts_constraints.py
extra-hooks/: hook-antares-study-version.py  hook-cefpython3.py  hook-pandas.py  hook-uvicorn.py
resources/: AntaresWebServerShortcut.lnk  application.yaml
scripts/: build-front.sh  create_db_migration.sh  create_shortcut.vbs  generate-changelog.py  generate-changelogdocs.sh  generate_changelog.py  install-debug.sh  install_pip.sh  it_examples.py  license_checker_and_adder.py  linter.sh  package_antares_installer.sh  package_antares_web.py  package_antares_web.sh  package_antares_web_win.sh  package_worker.sh  pre-start.sh  pre_start.sh  rollback.sh  server-docker.sh  server-gunicorn.sh  server.sh  stacktrace.sh  start-dev.sh  start.sh  swagger-ui.sh  update_version.py  update_version.sh
storage_api/: __init__.py  main.py  wsgi.py
tests/: conftest.py  conftest_db.py  conftest_instances.py  conftest_services.py  db_statement_recorder.py  dishka_utils.py  helpers.py  test_comprehensive_sts_constraints.py  test_custom_exception.py  test_front.py  test_main.py  test_nodes.py  test_resources.py  test_server.py  xml_compare.py
webapp/: .env.development  .eslintrc.cjs  .eslintrc.json  .gitignore  .npmrc  .prettierignore  .prettierrc.json  config-overrides.js  cypress.config.js  cypress.config.ts  eslint.config.js  index.html  license-header.js  package-lock.json  package.json  test-report.xml  tsconfig.json  tsconfig.node.json  vite.config.ts
webapp_v2/: .eslintrc.json  .gitignore  .prettierrc.json  config-overrides.js  package-lock.json  package.json  tsconfig.json
(+6384 files in other folders)
