[build-system]
requires = ["setuptools"]

[project]
name = "AntaREST"
version = "2.22.0"
authors = [{name="RTE, Antares Web Team", email="andrea.sgattoni@rte-france.com" }]
description="Antares Server"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers=[
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.11",
        "License :: Apache License :: 2.0",
        "Operating System :: OS Independent",
    ]

[project.urls]
Repository="https://github.com/AntaresSimulatorTeam/api-iso-antares"

[tool.setuptools]
platforms = [
    "linux-x86_64",
    "macosx-10.14-x86_64",
    "macosx-10.15-x86_64",
    "macosx-11-x86_64",
    "macosx-12-x86_64",
    "macosx-13-x86_64",
    "win-amd64",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["antarest*"]

[tool.mypy]
exclude = "antarest/fastapi_jwt_auth/*"
strict = true
files = "antarest"
plugins = "pydantic.mypy"
enable_error_code = "explicit-override"

[[tool.mypy.overrides]]
module = ["antarest/fastapi_jwt_auth.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "antareslauncher.*",
    "jsonschema",
    "pytest",
    "httpx",
    "jsonref",
    "jsonref",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "alembic.*"
no_implicit_reexport = false


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit_test",
    "integration_test"
]

[tool.coverage.run]
omit = ["antarest/tools/admin.py", "antarest/fastapi_jwt_auth/*.py"]
relative_files = true  # avoids absolute path issues in CI

[tool.ruff]
exclude = [
    "alembic/*",
    "conf/*",
    "docs/*",
    "examples/*",
    "extra-hooks/*",
    "resources/*",
    "scripts/*",
    "webapp/*",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assumes Python 3.11
target-version = "py311"

[tool.ruff.lint]
## E4, E7, E9 and F are the default configuration of ruff, "I" is added to handle imports
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
