[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AntaREST"
version = "2.32.0"
authors = [{name="RTE, Antares Web Team", email="andrea.sgattoni@rte-france.com" }]
description="Antares Server"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers=[
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.11",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
    ]
dependencies = [
    "antares-launcher==1.4.9",
    "antares-study-version==1.0.20",
    "antares-timeseries-generation==0.1.9",
    "fastapi==0.136.3",
    "uvicorn[standard]~=0.49.0",
    "pydantic~=2.13.4",
    "httpx~=0.28.1",
    "python-multipart~=0.0.26",
    "alembic~=1.18.4",
    "bcrypt~=5.0.0",
    "click~=8.4.1",
    "filelock~=3.29.3",
    "gunicorn~=23.0.0",
    "humanize~=4.15.0",
    "jsonref~=0.2",
    "PyJWT~=2.12.0",
    "MarkupSafe~=2.1.5",
    "numpy~=2.4.2",
    "numexpr==2.14.1",
    "openpyxl~=3.1.5",
    "pandas~=2.3.3",
    "paramiko~=3.5.1",
    "plyer~=2.1.0",
    "polars~=1.41.2",
    "psycopg2-binary~=2.9.9",
    "pyarrow~=23.0.1",
    "py7zr~=0.22.0",
    "prometheus-client==0.25.0",
    "PyYAML~=6.0.3",
    # Note: celery[redis]~=5.5.x requires redis<6.0.0
    "celery[redis]~=5.6.2",
    "redis~=5.3.1",
    "SQLAlchemy~=2.0.41",
    "tables==3.11.1",
    "typing_extensions~=4.15.0",
    "xlsxwriter~=3.2.0",
    "ecs-logging~=2.3.0",
]

[dependency-groups]
dev = [
    {include-group = "test"},
    "celery-types~=0.26.0",
    "ruff~=0.15.2",
    "mypy~=1.20.2",
    "pre-commit~=4.6.0",
    "pyinstaller==6.20.0",
    "pyinstaller-hooks-contrib==2026.6",
    # Extra requirements installed by `mypy --install-types`.
    # IMPORTANT: Make sure the versions of these typing libraries match the versions
    # of the corresponding implementation libraries used in production (in `pyproject.toml`).
    "pandas-stubs~=2.3.3",
    "pyarrow-stubs~=20.0.0",
    "types-openpyxl~=3.1.5",
    "types-paramiko~=3.5.0",
    "types-psycopg2~=2.9.9",
    "types-redis~=4.6.0",
    "types-requests~=2.33.0",
    "types-PyYAML~=5.4.1",
]
test = [
    "checksumdir~=1.3.0",
    "pytest~=9.0.2",
    "pytest-rerunfailures~=16.1",
    "pytest-xdist~=3.8.0",
    "pytest-cov~=7.1.0",
    "pytest-mock~=3.15.0",
    "jinja2~=3.1.3",
    "testcontainers~=4.14.2"
]

[project.optional-dependencies]
desktop = ["PyQt6~=6.11.0"]
windows = [
    "win10toast; platform_system == 'Windows'",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mike",
]

[project.urls]
Repository="https://github.com/AntaresSimulatorTeam/api-iso-antares"

[tool.hatch.build.targets.wheel]
packages = ["antarest"]

[tool.mypy]
exclude = "antarest/fastapi_jwt_auth/*"
strict = true
files = "antarest"
plugins = "pydantic.mypy"
enable_error_code = "explicit-override"

[[tool.mypy.overrides]]
module = ["antarest/fastapi_jwt_auth.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "antareslauncher.*",
    "jsonschema",
    "pytest",
    "httpx",
    "jsonref",
    "jsonref",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "alembic.*"
no_implicit_reexport = false


[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = false  # you may set it to true for debugging purpose
log_cli_level = "info"

[tool.coverage.run]
omit = ["antarest/tools/admin.py", "antarest/fastapi_jwt_auth/*.py"]
relative_files = true  # avoids absolute path issues in CI

[tool.ruff]
exclude = [
    "alembic/*",
    "conf/*",
    "docs/*",
    "examples/*",
    "extra-hooks/*",
    "resources/*",
    "scripts/*",
    "webapp/*",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assumes Python 3.11
target-version = "py311"

[tool.ruff.lint]
## E4, E7, E9 and F are the default configuration of ruff, "I" is added to handle imports
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
